# rql-py

./: .gitignore  LICENSE  README.md  package.json  pyproject.toml  rql-py-0.1.0.tgz  tmp.rql
examples/: basic_test.rql  quickstart.rql
rql/: __init__.py  __main__.py  cli.py
rql/engine/: __init__.py  ast.py  planner.py  render.py  retrieval.py  tracing.py
rql/engine/executors/: __init__.py  base.py  factory.py  llm.py  task.py  workflow.py
rql/engine/policies/: __init__.py  core.py  detectors.py
rql/engine/specs/: __init__.py  loader.py  registry.py
rql/engine/specs/answer/: 1.0.0.yaml
rql/engine/specs/extract/: 1.0.0.yaml
rql/engine/specs/summarize/: 1.0.0.yaml
rql/engine/specs/templates/: answer.j2  extract.j2  summarize.j2
rql/parser/: __init__.py  grammar.lark  parse.py
rql/repl/: __init__.py  app.py  commands.py  completer.py  keybinds.py  lexer.py  renderer.py  session.py
rql/runtime/: __init__.py  config.py  registry.py  session.py
scripts/: postinstall.js
